--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,23 @@ body {
     height: 100vh;
 }
 
+#header-container {
+    position: relative;
+    top: 40%;
+    left: 50%;
+    display:flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
 #name {
     font-family: Limelight;
     font-size: 72px;
     text-align: center;
     color: #000000;
-    position: relative;
-    top: 40%;
-    left: 50%;
     width: 40vw;
     height: 10vh;
     margin-left: -20vw;
-    margin-top: -5vh;
 }
 
 #reverse-name {
@@ -26,13 +31,9 @@ body {
     font-size: 72px;
     text-align: center;
     color: #ffffff;
-    position: relative;
-    top: 42%;
-    left: 50%;
     width: 40vw;
     height: 10vh;
     margin-left: -20vw;
-    margin-top: -5vh;
     direction: rtl;
     unicode-bidi: bidi-override;
     transform:rotate(-180deg);
@@ -42,13 +43,15 @@ body {
     background-color: #000000;
     height: .5vh;
     width: 50vw;
-    margin-left: -10vw;
+    margin-left: -30vw;
 }
 
 #reverse-name-underline {
     background-color: #ffffff;
     height: .5vh;
     width: 50vw;
+    margin-left: -20vw;
+    margin-bottom: .5vh;
 }
 
 #bullets {
@@ -118,14 +121,14 @@ body {
     position: relative;
     width: 60vw;
     left: 30vw;
-    height: 100vh;
+    margin-bottom: 25vh;
 }
 
 #portfolio {
     position: relative;
     width: 60vw;
     left: 30vw;
-    height: 100vh;
+    margin-bottom: 25vh;
 }
 
 #resume {
