--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
     width: 40vw;
     height: 10vh;
     margin-left: -20vw;
+    opacity: 0;
 }
 
 #reverse-name {
@@ -34,6 +35,7 @@ body {
     width: 40vw;
     height: 10vh;
     margin-left: -20vw;
+    opacity: 0;
     direction: rtl;
     unicode-bidi: bidi-override;
     transform:rotate(-180deg);
@@ -43,14 +45,14 @@ body {
     background-color: #000000;
     height: .5vh;
     width: 50vw;
-    margin-left: -30vw;
+    margin-left: 50vw;
 }
 
 #reverse-name-underline {
     background-color: #ffffff;
     height: .5vh;
     width: 50vw;
-    margin-left: -20vw;
+    margin-left: -100vw;
     margin-bottom: .5vh;
 }
 
