--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 body {
     background-color: #E2F0CC;
 }
@@ -137,7 +142,7 @@ body {
     position: relative;
     width: 60vw;
     left: 30vw;
-    height: 100vh;
+    margin-bottom: 25vh;
 }
 
 #ending {
