--- a/src/Components/Overlay/Overlay.css
+++ b/src/Components/Overlay/Overlay.css
@@ -66,12 +66,15 @@
     min-width: 25px;
     width: 2vw;
     margin-left: 1vw;
-
     transition-duration: .25s;
     transition-timing-function: ease-in-out;
+    /* border-radius: 100%; */
 }
 
 .logo:hover {
     max-width: 37.5px;
     min-width: 27.5px;
+    width: 100%;
+    height: 100%;
+    /* box-shadow: 0px 0px 10px 0px var(--dark-accent-color); */
 }
