--- a/styles/_typewriter.scss
+++ b/styles/_typewriter.scss
@@ -14,6 +14,7 @@
     font-family: baloo;
     font-size: 5vmin; //28px;
     margin-top: 2.5vmin;
+    line-height: 100%;
     // text-shadow: 0 7px 5px rgb(0 0 0 / 25%);
     filter: drop-shadow(0px 7px 5px rgba(0, 0, 0, 0.25));
 
@@ -36,7 +37,7 @@
 .typewriter {
   display: flex;
   align-items: center;
-  height: 10vmin;
+  // height: 10vmin;
 
   img {
     display: none;
@@ -57,11 +58,12 @@
 
   &.typing {
     .caret {
+      will-change: filter;
       display: inline-block;
-      height: 40px;
-      width: 10px;
+      height: 7.5vmin; //40px;
+      width: 1.5vmin;
       border-radius: 10px;
-      margin-left: 10px;
+      // margin-left: 10px;
       transform: translate(0, 3px);
       filter: drop-shadow(0px 7px 5px rgba(0, 0, 0, 0.25));
 
@@ -76,15 +78,15 @@
         }
       }
 
-      @include responsive.md {
-        height: 50px;
-        width: 12.5px;
-      }
-      @include responsive.lg {
-        height: 60px;
-        width: 15px;
-        transform: translate(0, 6px);
-      }
+      // @include responsive.md {
+      //   height: 50px;
+      //   width: 12.5px;
+      // }
+      // @include responsive.lg {
+      //   height: 60px;
+      //   width: 15px;
+      //   transform: translate(0, 6px);
+      // }
     }
   }
 
