--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,8 +20,10 @@
   --green: #58cc02;
   --blue: #1cb0f6;
 
+  --white: #f7f7f7;
   --caramel: #cd7900;
   --brown: #4d2b12;
+  --light-grey: #afafaf;
   --grey: #4b4b4b;
   --dark-grey: #383737;
 
@@ -76,6 +78,7 @@ html {
 
 body {
   overflow: hidden;
+  overflow-y: auto;
   -webkit-text-size-adjust: 100%;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -109,14 +112,14 @@ body {
   }
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 #view {
   position: relative;
   height: 100%;
   width: 100%;
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
 
 p {
@@ -151,13 +154,16 @@ p {
 
 #starting-background {
   position: absolute;
-  height: 100vh;
+  // height: 100vh;
+  height: auto;
+  width: auto;
   top: 5vh;
   left: 50%;
   transform: translate(-50%, 0);
 
   img {
-    height: 100%;
+    // height: 100%;
+    height: 100vh;
   }
 
   &::after {
@@ -197,7 +203,7 @@ p {
 }
 
 body.can-scroll {
-  overflow-y: auto;
+  // overflow-y: auto;
 
   #scroll-down {
     transition: transform 1s ease 0.5s, opacity 1s ease 0.5s;
@@ -318,18 +324,26 @@ body.can-scroll {
   // cursor: none;
   overflow-y: auto;
   position: relative;
+  background: var(--blue);
+  background: linear-gradient(var(--blue) 65%, var(--green) 65%);
+  // background: url(./squigglies.gif) repeat center top;
+  // background-size: 10%;
 }
 
-.section {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  background-color: #eee;
-  overflow-y: hidden;
+// .section {
+//   position: relative;
+//   height: 100%;
+//   width: 100%;
+//   background-color: #eee;
+//   overflow-y: hidden;
 
-  &:nth-child(2n) {
-    background-color: #ccc;
-  }
+//   &:nth-child(2n) {
+//     background-color: #ccc;
+//   }
+// }
+
+.section {
+  margin-bottom: 50px;
 }
 
 .section-content {
@@ -352,20 +366,103 @@ body.can-scroll {
 }
 
 .section-header {
-  color: white;
+  color: var(--white);
   font-family: baloo;
-  margin-left: 75px;
-  margin-top: 25px;
-  font-size: 36px;
+  // margin-left: 75px;
+  // margin-top: 25px;
+  font-size: max(calc(7.5 * var(--device-width) / 100), 36px);
+  line-height: 100%;
+  text-shadow: 0px 5px rgb(0 0 0 / 25%);
 
-  @include responsive.md {
-    font-size: 48px;
+  // @include responsive.md {
+  //   font-size: 48px;
+  // }
+  // @include responsive.lg {
+  //   font-size: 64px;
+  // }
+  // @include responsive.xl {
+  //   font-size: 72px;
+  // }
+}
+
+.section-subheader {
+  color: var(--grey);
+  font-family: baloo;
+  font-size: max(calc(3.75 * var(--device-width) / 100), 20px);
+  line-height: 100%;
+}
+
+.card {
+  margin: 10px 0 25px 0;
+  position: relative;
+  font-size: 10px;
+  width: 100%;
+  // min-height: 100px;
+  border-radius: 1em;
+  background: rgba(255, 255, 255, 0.15);
+  padding: 2.5% 5%;
+  box-sizing: border-box;
+
+  &::before {
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 1em;
+    box-shadow: 0 1em 0 0 rgba(0, 0, 0, 0.25);
   }
-  @include responsive.lg {
-    font-size: 64px;
+
+  p {
+    font-size: max(calc(3 * var(--device-width) / 100), 18px);
+    font-family: "baloo";
+    color: var(--white);
+    line-height: 115%;
+    &.small-text {
+      font-size: max(calc(2 * var(--device-width) / 100), 16px);
+    }
+    &.big-text {
+      font-size: max(calc(4.5 * var(--device-width) / 100), 24px);
+    }
   }
-  @include responsive.xl {
-    font-size: 72px;
+}
+
+.bulleted::before {
+  content: "• ";
+  color: white;
+}
+
+// === Address Bar Styles
+
+#url {
+  font-family: baloo;
+  font-size: calc(4 * var(--device-width) / 100);
+  line-height: 100%;
+  color: var(--dark-grey);
+  @include responsive.square {
+    font-size: calc(1.75 * var(--device-width) / 100);
+  }
+}
+
+#url-page {
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    left: 100%;
+    top: 10%;
+    bottom: 10%;
+    right: 0;
+    opacity: 50%;
+    background: #ffc800;
+  }
+
+  &.highlight {
+    &::after {
+      transition: left 0.25s ease;
+      left: 0;
+    }
   }
 }
 
@@ -385,7 +482,7 @@ body.can-scroll {
   background: var(--caramel);
   position: absolute;
   width: 100%;
-  height: 60%;
+  height: 40%;
   bottom: 0;
   left: 0;
   border-radius: 2.5vh 2.5vh 0 0;
@@ -400,14 +497,21 @@ body.can-scroll {
 }
 
 #cursor {
-  transition: transform 0.25s ease-out;
+  // transition: transform 0.25s ease-out;
+  will-change: filter;
+  position: absolute;
+  height: 5vh;
+  top: 50%;
+  left: 50%;
+  transform: translate(0px, 0px);
+  filter: drop-shadow(rgba(0, 0, 0, 0.25) -5px 5px 5px);
 }
 
 #mouse-holder {
   position: absolute;
   z-index: 1;
   height: 27.5vh;
-  transition: transform 0.25s ease-out;
+  // transition: transform 0.25s ease-out;
   top: calc(15% + var(--device-height) + var(--device-border-bottom));
   left: 65%;
 
@@ -432,9 +536,10 @@ body.can-scroll {
 #navigation {
   display: flex;
   position: absolute;
-  height: calc(100% - 72px);
-  top: 36px;
-  left: 15px;
+  width: 2.5%;
+  height: calc(90% - 30px);
+  top: calc(10% + 15px);
+  left: 2.5%;
 }
 
 #navigation-thumb {
@@ -450,8 +555,8 @@ body.can-scroll {
   pointer-events: all;
   cursor: grab;
   height: 100%;
-  width: 15px;
-  border-radius: 15px;
+  width: 100%;
+  border-radius: 9999px;
   background: rgb(0 0 0 / 25%);
   overflow: hidden;
 
@@ -499,5 +604,16 @@ body.can-scroll {
 
   &:active {
     transform: translate(0, -5px) scale(1.05);
+  }
+}
+
+// === General Layout Stuff ===
+.collapsible-flex-row {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  @include responsive.tall {
+    flex-direction: row;
   }
 }
