--- a/main.css
+++ b/main.css
@@ -59,6 +59,8 @@
   --purple: #190624;
   --purple-rgb: 25, 6, 36;
   --green: #58cc02;
+  --dark-green: #0d4c06;
+  --blue-green: #00813f;
   --blue: #1cb0f6;
   --white: #f7f7f7;
   --caramel: #cd7900;
@@ -208,12 +210,13 @@ p {
   opacity: 0;
   transform: translate(0, -100%);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: absolute;
   width: 100%;
   height: 10%;
-  bottom: 15px;
+  bottom: 30px;
 }
 #scroll-down img {
   filter: drop-shadow(0px 7px 5px rgba(0, 0, 0, 0.25));
@@ -271,11 +274,6 @@ body.can-scroll #scroll-down {
   background: var(--purple);
   overflow: hidden;
 }
-@media (min-aspect-ratio: 1/1) {
-  #project-page {
-    overflow-x: auto;
-  }
-}
 
 #project-page-underlay {
   pointer-events: none;
@@ -314,9 +312,10 @@ body.can-scroll #scroll-down {
 }
 
 #project-page-content {
-  overflow-y: auto;
+  overflow-x: hidden;
   position: relative;
   background: var(--green);
+  cursor: none;
 }
 
 .section {
@@ -351,7 +350,7 @@ body.can-scroll #scroll-down {
 }
 
 .section-subheader {
-  color: var(--grey);
+  color: var(--blue-green);
   font-family: baloo;
   font-size: max(3.75 * var(--device-width) / 100, 20px);
   line-height: 100%;
@@ -377,22 +376,26 @@ body.can-scroll #scroll-down {
   border-radius: 1em;
   box-shadow: 0 1em 0 0 rgba(0, 0, 0, 0.25);
 }
-.card p {
+
+p {
   font-size: max(3 * var(--device-width) / 100, 18px);
   font-family: "baloo";
-  color: var(--white);
+  color: var(--dark-green);
   line-height: 115%;
 }
-.card p.small-text {
+p.small-text {
   font-size: max(2 * var(--device-width) / 100, 16px);
 }
-.card p.big-text {
+p.big-text {
   font-size: max(4.5 * var(--device-width) / 100, 24px);
+  color: var(--white);
+  text-shadow: 0px 3px rgba(0, 0, 0, 0.25);
+  margin-bottom: 5px;
 }
 
 .bulleted::before {
   content: "• ";
-  color: white;
+  color: var(--dark-green);
 }
 
 #url {
@@ -492,6 +495,7 @@ body.can-scroll #scroll-down {
   height: calc(90% - 30px);
   top: calc(10% + 15px);
   left: 2.5%;
+  cursor: none;
 }
 
 #navigation-thumb {
@@ -503,17 +507,18 @@ body.can-scroll #scroll-down {
 }
 
 #navigation-track {
-  transition: width 0.25s ease 0.2s, border-radius 0.25s ease 0.2s;
+  transition: background-color 0.2s ease;
   pointer-events: all;
-  cursor: grab;
   height: 100%;
   width: 100%;
   border-radius: 9999px;
-  background: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.25);
   overflow: hidden;
 }
+#navigation-track:hover {
+  background-color: rgba(0, 0, 0, 0.35);
+}
 #navigation-track:active {
-  cursor: grabbing;
   width: 30px;
   border-radius: 30px;
 }
